# TimeGen2Fw

./: cross_bcc.txt  meson.build
flasher/: main.c  make_flasher.py
include/: S25FL128L.h  peripherals.h  spim_driver.h
src/: main.c  peripherals.c
